Renaming method SearchMoveResult.getEvaluationCollisions()